base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: devopszon-client-ingress
  namespace: devopszon
spec:
  ingressClassName: nginx
  rules:
  - host: console.devopszon.com
    http:
      paths:
      - backend:
          service:
            name: devopszon-client
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - console.devopszon.com
    secretName: devopszon-client-ingress-secret
